# TigrisSecuritySystem

./: .gitignore  Cargo.toml
config/: development.toml  production.toml
migrations/: 0001_init.sql  0002_warns.sql  0003_mute.sql  0004_levels.sql  0005_antinuke.sql  0006_protected_channels.sql  0007_protected_channels_default_now.sql
scripts/: dev.sh
scripts/systemd/: tss-bot.service
src/: admcheck.rs  admin_points.rs  altguard.rs  ban.rs  chatguard.rs  command_acl.rs  commands_sync.rs  config.rs  fotosystem.rs  idguard.rs  kick.rs  levels.rs  lib.rs  logging.rs  mdel.rs  mute.rs  new_channels.rs  permissions.rs  registry.rs  stats_channels.rs  techlog.rs  test_cmd.rs  userinfo.rs  verify.rs  warn.rs  watchlist.rs  welcome.rs
src/antinuke/: api.rs  approve.rs  commands.rs  mod.rs  restore.rs  snapshot.rs
src/db/: mod.rs
src/discord/: mod.rs
tests/: altguard_bypass.rs  antinuke_cmd.rs  antinuke_rotation_maintenance.rs  antinuke_snapshot_restore.rs  idguard_tests.rs  test_cmd.rs
