[package]
name = "tigris_security"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.11", features = ["rustls-tls"] }
image   = { version = "0.24", default-features = false, features = ["png", "jpeg", "gif"] }
regex   = "1"
once_cell = "1"
chrono = { version = "0.4", features = ["clock"] }
unicode-normalization = "0.1"
axum = { version = "0.7", features = ["macros"] }


# Async/runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"



# Logging/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }


# Config i env
serde = { version = "1", features = ["derive"] }
serde_json = "1"
figment = { version = "0.10", features = ["toml", "env"] }
dotenvy = "0.15"


# DB
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "uuid"] }


# Discord (poise nad serenity)
poise = "0.6"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }

subtle = "2"

# Cache/utility
moka = { version = "0.12", features = ["future", "sync"] }
dashmap = "5"
governor = "0.6"
url = "2.5.7"
tempfile = "3.21.0"
tonic = { version = "0.11", features = ["transport"] }

[dev-dependencies]
proptest = "1.7.0"
