[package]
name = "tigris_security"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
reqwest = { version = "0.12.23", features = ["rustls-tls"] }
image   = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif"] }
regex   = "1.11.2"
once_cell = "1.21.3"
chrono = { version = "0.4.42", features = ["clock"] }
unicode-normalization = "0.1"
axum = { version = "0.8.4", features = ["macros"] }
rand = "0.9.2"


# Async/runtime
tokio = { version = "1.47.1", features = ["full"] }
futures-util = "0.3.31"



# Logging/observability
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "time"] }


# Config i env
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
figment = { version = "0.10.19", features = ["toml", "env"] }
dotenvy = "0.15.7"


# DB
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "uuid"] }


# Discord (poise nad serenity)
poise = "0.6.1"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }

subtle = "2.6.1"

# Cache/utility
moka = { version = "0.12.10", features = ["future", "sync"] }
dashmap = "6.1.0"
governor = "0.10.1"
url = "2.5.7"
tempfile = "3.22.0"
tonic = { version = "0.14.2", features = ["transport"] }

[features]
default = []
test-utils = []

[dev-dependencies]
proptest = "1.7.0"
